2009-02-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/oci8.h, ext/oci8/stmt.c: fix array DML
	    and DateTime object problem. It didn't work with bind classes
	    which overwrite 'set' and 'get'. (Reported by Leoš Bitto)
	* test/test_array_dml.rb: fix to test array DML and DateTime object.

2009-02-08  KUBO Takehiro  <kubo@jiubao.org>
	* VERSION: change version from 2.0-svn to 2.0.0 to pass ruby
	    gem's version string validator.
	* ruby-oci8.gemspec: added.
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
	  ext/oci8/win32.c: 1. add OCI8::Win32Util.dll_path to
	    retrieve Oracle home location from the OCI.DLL location.
	    2. add OCI8::Win32Util.enum_homes to get Oracle home and
	    NLS_LANG pairs in Windows registry.
	* lib/oci8/encoding-init.rb: get NLS_LANG from Windows registry
	    if environment variable NLS_LANG is not set.
	* ext/oci8/oraconf.rb: Change the output encoding of sqlplus to
	    US7ASCII by setting NLS_LANG. If the output encoding is
	    incompatible with the default external encoding, it raises
	    'invalid byte sequence' when using ruby 1.9.
	* lib/oci8/datetime.rb: fix for ruby 1.9. Ruby 1.9 Time
	    class's resolution is nanosecond.
	* dist-files: add dist-files, ruby-oci8.gemspec and ext/oci8/win32.c.

2009-02-06  KUBO Takehiro  <kubo@jiubao.org>
	* setup.rb: 1. install lib/**/*.yml flies also.
	    (It is pointed by Nate Wiger that encoding.yml is not installed.)
	    2. exclude .svn or .git directories on installation.
	* lib/oci8/oci8.rb: A private method define_a_column was renamed
	    to define_one_column to prevent activerecord oracle adapter
	    and oracle enhanced adapter from redefining the method.
	* dist-files: add newly added file names which must be included
	    in gem or tar.gz packages.

2009-02-01  KUBO Takehiro  <kubo@jiubao.org>
	* lib/dbd/OCI8.rb: add code for ruby-dbi 0.4 type conversion.
	* test/test_dbi.rb: suppress deprecated warnings while running